# novelhub

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  PLAN.md  README.md  opencode.jsonc
.agents/: AGENT_CATALOG.md  BACKLOG.yaml  PROJECT.md  ROADMAP.md  STATUS.md
.github/: copilot-instructions.md
backend/: pyproject.toml
backend/app/: backup.py  config.py  crud.py  database.py  export.py  graph.py  main.py  migrations.py  parser.py  schemas.py  scraper.py  search.py  security.py  timeline.py  ws.py
backend/app/analysis/: __init__.py  pipeline.py  schemas.py
backend/app/chat/: crud.py  schemas.py  tools.py
backend/app/kb/: __init__.py  crud.py  schemas.py
backend/app/llm/: __init__.py  anthropic.py  base.py  fake.py  local.py  ollama.py  openai.py
backend/app/routers/: analysis.py  backup.py  bookmarks.py  chapters.py  chat.py  export.py  graph.py  health.py  kb.py  novels.py  search.py  sources.py  wiki.py
backend/app/wiki/: __init__.py  generator.py  schemas.py
backend/novelhub_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_analysis.py  test_backup.py  test_chat.py  test_export.py  test_graph.py  test_health.py  test_ingestion.py  test_kb.py  test_llm.py  test_migrations.py  test_novels.py  test_parser.py  test_search.py  test_security.py  test_wiki.py  test_ws.py
contracts/: openapi.json
frontend/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
scripts/: clear_data.sh  install.sh  remove_local_llm.sh  (+2 more)
(+213 files in other folders)
